--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
 ---
-layout: home
-author_profile: true
+layout: page
+excerpt: "Homepage of Igor Shvab"
+tags: 
+comments: false
+share: false
+image:
+  feature: 
+  credit: 
+  creditlink: 
 ---
+
+I am an applied mathematician at heart, interested in engineering, data science and software development. I enjoy traveling, 
+mountaineering, and a minimal website.
