--- a/index.html
+++ b/index.html
@@ -1,12 +1,5 @@
 ---
 layout: page
-excerpt: "Homepage of Igor Shvab"
-tags: 
-comments: false
-share: false
-image:
-  feature: 
-  credit: 
-  creditlink: 
+author_profile: true
 ---
 
