--- a/index.html
+++ b/index.html
@@ -2,3 +2,5 @@
 layout: home
 author_profile: true
 ---
+I am an applied mathematician at heart, interested in engineering, data science and software development. 
+I enjoy traveling, running, a clean inbox and a minimal website.
