--- a/index.html
+++ b/index.html
@@ -3,16 +3,6 @@ layout: home
 author_profile: true
 ---
 ---
-layout: page
-excerpt: "Homepage of Joost H. van der Linden"
-tags: 
-comments: false
-share: false
-image:
-  feature: 
-  credit: 
-  creditlink: 
----
 
-I am an applied mathematician at heart, interested in engineering, data science and software development. 
-I enjoy traveling, running, a clean inbox and a minimal website.
+I am physicist interested in data science and software development. 
+I enjoy traveling, mountaineering, and a minimal website.  
